--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -68,7 +68,7 @@ a:hover {
     line-height: 1.6;
     text-align: center;
     padding: 20px;
-    color: #333; /* Feel free to change this to match your site's color scheme */
+    color: #FFFFFF; /* Feel free to change this to match your site's color scheme */
     background-color: ##FF726A;; /* coral This provides a subtle background to set the section apart; adjust as needed */
     margin: 20px auto; /* Adds some margin to separate the section from others */
     max-width: 800px; /* Controls the width of the content */
