--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -127,7 +127,7 @@ a {
 .tag {
   margin: 2px;
   padding: 2px 5px;
-  background-color: #f3f3f3;
+  background-color: #FF726A;
   border-radius: 5px;
 }
 
