--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -115,7 +115,7 @@
                     </div>
                 </section>
                 <section class="hero-term-info">
-                    <p>By starting to use the chatspheres service, you agree to the <a href="/terms">Terms of Use</a></p>
+                    <p>By starting to use the chatspheres service, you agree to the <a class="termslink" href="/terms">Terms of Use</a></p>
                     <span>© 2023 chatspheres Inc., all rights reserved</span>
                 </section>
             </main>
