--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -44,6 +44,12 @@ a {
     line-height: 80px; /* Vertically centers the text */
     font-size: 20px; /* Increase terms info text size */
 }
+.termslink{
+    color: #FFFFFF
+}
+
+
+
 
 /* Main Button */
 .button-make-feat {
