--- a/public/views/joinurspheres.html
+++ b/public/views/joinurspheres.html
@@ -22,7 +22,7 @@
 
                     </a>
                     <a class="logo" href="/">
-                        <img class="header-logo-image" src="../images/cooltext441173494358215.gif" alt="featlytalk-webrtc-logo" />
+                        <img class="header-logo-image" src="../images/text.gif" alt="featlytalk-webrtc-logo" />
 
                     </a>
                 </section>
