--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -131,15 +131,15 @@ a {
 
 .room {
   border-radius: 50%; /* This will make the div circular */
-  width: 200px; /* Adjust the width and height as needed */
-  height: 200px;
-  border: 2px solid #FF726A; /* Border for the circle */
+  width: 300px; /* Adjust the width and height as needed */
+  height: 300px;
+  border: 3px solid #FF726A; /* Border for the circle */
     color: white;
-  padding: 10px;
+  padding: 15px;
   overflow: hidden; /* Hide overflowing content */
   text-align: center; /* Center the text */
   word-wrap: break-word; /* Break long words to prevent overflow */
-  font-size: 12px; /* Adjust font size as needed */
+  font-size: 19px; /* Adjust font size as needed */
 }
 
 .tag {
@@ -147,6 +147,7 @@ a {
   padding: 2px 5px;
   background-color: #FF726A;
   border-radius: 5px;
+    font-size: 17px;
 }
 
 .room-content {
