--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -156,13 +156,14 @@ a {
   width: 300px; /* Adjust the width and height as needed */
   height: 300px;
   border: 3px solid #FF726A; /* Border for the circle */
-    color: white;
-  padding: 15px;
+  color: white;
+  padding: 40px; /* Increase padding to prevent text from touching the edges */
   overflow: hidden; /* Hide overflowing content */
   text-align: center; /* Center the text */
   word-wrap: break-word; /* Break long words to prevent overflow */
   font-size: 19px; /* Adjust font size as needed */
 }
+
 
 .tag {
   margin: 2px;
