--- a/public/views/about.html
+++ b/public/views/about.html
@@ -15,7 +15,7 @@
 
         <!-- Title and Icon -->
 
-        <title>Featly Talk SFU - About.</title>
+        <title>ChatSpheres SFU - About.</title>
         <link rel="shortcut icon" href="../images/logo.jpg" />
         <link rel="apple-touch-icon" href="../images/logo.jpg" />
 
@@ -27,11 +27,11 @@
 
         <meta
             name="description"
-            content="Featly Talk SFU powered by WebRTC and mediasoup, Real-time Simple Secure Fast video calls, messaging and screen sharing capabilities in the browser."
+            content="ChatSpheres SFU powered by WebRTC and mediasoup, Real-time Simple Secure Fast video calls, messaging and screen sharing capabilities in the browser."
         />
         <meta
             name="keywords"
-            content="webrtc, featly, mediasoup, mediasoup-client, self hosted, voip, sip, real-time communications, chat, messaging, meet, webrtc stun, webrtc turn, webrtc p2p, webrtc sfu, video meeting, video chat, video conference, multi video chat, multi video conference, peer to peer, p2p, sfu, rtc, alternative to, zoom, microsoft teams, google meet, jitsi, meeting"
+            content="webrtc, Chatsphereres, mediasoup, mediasoup-client, self hosted, voip, sip, real-time communications, chat, messaging, meet, webrtc stun, webrtc turn, webrtc p2p, webrtc sfu, video meeting, video chat, video conference, multi video chat, multi video conference, peer to peer, p2p, sfu, rtc, alternative to, zoom, microsoft teams, google meet, jitsi, meeting"
         />
 
         <!-- https://ogp.me -->
@@ -104,9 +104,7 @@
                         </li>
                         <li>
                             Contact:
-                                <a target="_blank" href="https://www.linkedin.com/company/featlyapp/"
-                                    >Featly Inc.</a
-                                >
+                               
                             </li>
                         </ul>
                         <ul class="footer-social-links list-reset">
@@ -143,29 +141,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a
-                                    class="github-button"
-                                    href="https://github.com/sponsors/Featly-Inc"
-                                    data-color-scheme="no-preference: light; light: light; dark: dark;"
-                                    data-icon="octicon-heart"
-                                    data-size="large"
-                                    aria-label="Sponsor @Featly Inc on GitHub"
-                                    >Sponsor</a
-                                >
+                               
                             </li>
                             <li>
-                                <a
-                                    class="github-button"
-                                    href="https://github.com/Featly-Inc/talk"
-                                    data-color-scheme="no-preference: light; light: light; dark: dark;"
-                                    data-size="large"
-                                    data-show-count="true"
-                                    aria-label="Star Featly Inc on GitHub"
-                                    >Star</a
-                                >
+                                
                             </li>
                         </ul>
-                        <div class="footer-copyright">&copy; 2023 Featly Inc., all rights reserved</div>
+                        <div class="footer-copyright">&copy; 2023 Chatspheres., all rights reserved</div>
                     </div>
                 </div>
             </footer>
